[gd_scene format=3 uid="uid://cwiv4uhq0uncn"]

[ext_resource type="Theme" uid="uid://3q7s11gs73j1" path="res://resources/themes/nox.tres" id="1_5h4wo"]
[ext_resource type="Script" uid="uid://bohs8rq1l0mcd" path="res://interface/screens/main.gd" id="2_fn5t8"]
[ext_resource type="Script" uid="uid://b05gsor8jp2wt" path="res://interface/screens/main/mobile_container.gd" id="3_fn5t8"]
[ext_resource type="PackedScene" uid="uid://bt5nv2a5po3kk" path="res://interface/components/servers/server_list.tscn" id="4_5h4wo"]
[ext_resource type="PackedScene" uid="uid://dgl57tyvhuxtx" path="res://interface/screens/main/channel_container.tscn" id="5_k7vs8"]
[ext_resource type="Script" uid="uid://ckln06vm8xqkx" path="res://interface/screens/main/chat_frame.gd" id="9_2khah"]
[ext_resource type="PackedScene" uid="uid://cqljlwc8jrffj" path="res://interface/components/servers/text_area.tscn" id="10_iotkg"]
[ext_resource type="PackedScene" uid="uid://bln4u7aj8h827" path="res://interface/components/servers/member_list.tscn" id="11_67y3l"]
[ext_resource type="Script" uid="uid://cmwfestop6ad8" path="res://interface/components/mobile_keyboard_separator.gd" id="12_nbw81"]

[node name="Main" type="Control" unique_id=1465277677]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
theme = ExtResource("1_5h4wo")
script = ExtResource("2_fn5t8")

[node name="BackgroundImage" type="TextureRect" parent="." unique_id=1315379704]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="VirtKbSepContainer" type="VBoxContainer" parent="." unique_id=1802230134]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="MobileContainer" type="Control" parent="VirtKbSepContainer" unique_id=194873318]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_fn5t8")

[node name="MobileChannelList" type="MarginContainer" parent="VirtKbSepContainer/MobileContainer" unique_id=1522963908]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VirtKbSepContainer/MobileContainer/MobileChannelList" unique_id=781682476]
layout_mode = 2

[node name="Servers" type="PanelContainer" parent="VirtKbSepContainer/MobileContainer/MobileChannelList/HBoxContainer" unique_id=1912331874]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VirtKbSepContainer/MobileContainer/MobileChannelList/HBoxContainer/Servers" unique_id=594918056]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VirtKbSepContainer/MobileContainer/MobileChannelList/HBoxContainer/Servers/ScrollContainer" unique_id=169266357]
layout_mode = 2
size_flags_vertical = 3

[node name="ServerList" parent="VirtKbSepContainer/MobileContainer/MobileChannelList/HBoxContainer/Servers/ScrollContainer/MarginContainer" unique_id=716935970 instance=ExtResource("4_5h4wo")]
layout_mode = 2

[node name="ChannelContainer" parent="VirtKbSepContainer/MobileContainer/MobileChannelList/HBoxContainer" unique_id=271820007 instance=ExtResource("5_k7vs8")]
layout_mode = 2
size_flags_horizontal = 3

[node name="MobileMemberList" type="MarginContainer" parent="VirtKbSepContainer/MobileContainer" unique_id=1642732582]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Members" type="PanelContainer" parent="VirtKbSepContainer/MobileContainer/MobileMemberList" unique_id=284275065]
layout_mode = 2

[node name="MemberList" parent="VirtKbSepContainer/MobileContainer/MobileMemberList/Members" unique_id=756092059 instance=ExtResource("11_67y3l")]
layout_mode = 2

[node name="MobileChatContainer" type="PanelContainer" parent="VirtKbSepContainer/MobileContainer" unique_id=1258899384]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_type_variation = &"PanelSolid"

[node name="MarginContainer" type="MarginContainer" parent="VirtKbSepContainer/MobileContainer/MobileChatContainer" unique_id=1968310305]
layout_mode = 2

[node name="ChatContainer" type="VBoxContainer" parent="VirtKbSepContainer/MobileContainer/MobileChatContainer/MarginContainer" unique_id=1819694883]
layout_mode = 2

[node name="ChatFrame" type="PanelContainer" parent="VirtKbSepContainer/MobileContainer/MobileChatContainer/MarginContainer/ChatContainer" unique_id=1946490708]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("9_2khah")

[node name="TextArea" parent="VirtKbSepContainer/MobileContainer/MobileChatContainer/MarginContainer/ChatContainer" unique_id=100155648 instance=ExtResource("10_iotkg")]
layout_mode = 2

[node name="MobileKeyboardSeparator" type="Control" parent="VirtKbSepContainer" unique_id=22528712]
layout_mode = 2
script = ExtResource("12_nbw81")

[node name="ConnectionIssueNotice" type="PanelContainer" parent="." unique_id=710384571]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 2
theme_type_variation = &"PanelContainer_Error"

[node name="MarginContainer" type="MarginContainer" parent="ConnectionIssueNotice" unique_id=1495434604]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="ConnectionIssueNotice/MarginContainer" unique_id=1410946682]
layout_mode = 2
text = "This server is currently offline."

[editable path="VirtKbSepContainer/MobileContainer/MobileChannelList/HBoxContainer/Servers/ScrollContainer/MarginContainer/ServerList"]
